# mantle

./: .gitignore  CMakeLists.txt  README.md  build.sh  fallback.js  fetch_dobby.sh  install.sh  sudoers-mantle-root  uninstall.sh  your_script.js
common/: mantle_mach.m
examples/: example.js  example_springy.js
include/: mantle_ipc.h  mantle_mach.h  mantle_protocol.h
wm_core/: core.m
wm_init/: env.c  init.m
wm_std_lib/: windowmanager.js
